--- a/.github/workflows/master_go-azure-ait-test.yml
+++ b/.github/workflows/master_go-azure-ait-test.yml
@@ -17,22 +17,25 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up .NET Core
-        uses: actions/setup-dotnet@v1
+        uses: actions/setup-go@v3
         with:
-          dotnet-version: '6.0.x'
-          include-prerelease: true
+          go-version: 1.22
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v3
-        with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+      - name: Copy static template files
+        run: xcopy /i templates build\templates
+
+      - name: Copy static public files
+        run: xcopy /i public build\public
+
+      - name: Build
+        run: go build -o build/go-app.exe -v
+
+      - name: Test
+        run: go test
 
   deploy:
     runs-on: windows-latest
