--- a/.github/workflows/master_go-azure-ait-test.yml
+++ b/.github/workflows/master_go-azure-ait-test.yml
@@ -16,13 +16,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up .NET Core
+      - name: Set up GO
         uses: actions/setup-go@v3
         with:
           go-version: 1.22
-
-      - name: Copy static template files
-        run: xcopy /i templates build\templates
 
       - name: Copy static public files
         run: xcopy /i public build\public
