--- a/.github/workflows/master_go-azure-ait-test.yml
+++ b/.github/workflows/master_go-azure-ait-test.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - go-azure-ait-test
 
 on:
@@ -21,7 +18,6 @@ jobs:
         with:
           go-version: 1.22
 
-
       - name: Build
         run: go build -o build/go-app.exe -v
 
@@ -35,10 +31,11 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
-      
+      - uses: actions/checkout@v4
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
@@ -50,8 +47,5 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          # Name of the Azure Web App
-          app-name: go-app.exe 
-          # Applies to Web App only: Path to package or folder. *.zip, *.war, *.jar or a folder to deploy
+          app-name: <Your-Azure-WebApp-Name> # Replace with your Azure Web App name
           package: build/
-          
