--- a/.github/workflows/master_go-azure-ait-test.yml
+++ b/.github/workflows/master_go-azure-ait-test.yml
@@ -47,5 +47,5 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: <Your-Azure-WebApp-Name> # Replace with your Azure Web App name
+          app-name: go-azure-ait-test # Replace with your Azure Web App name
           package: build/
