--- a/.github/workflows/master_go-azure-ait-test.yml
+++ b/.github/workflows/master_go-azure-ait-test.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Test
         run: go test
 
+      - name: Install zip utility
+        run: sudo apt-get update && sudo apt-get install -y zip
+
       - name: Archive build artifacts
         run: |
           mkdir -p build/zip
