--- a/.github/workflows/master_go-azure-ait-test.yml
+++ b/.github/workflows/master_go-azure-ait-test.yml
@@ -11,7 +11,8 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Set up Go
         uses: actions/setup-go@v4
@@ -44,11 +45,6 @@ jobs:
   deploy:
     runs-on: windows-latest
     needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Download build artifact
@@ -57,16 +53,11 @@ jobs:
           name: go-app
           path: build
 
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_0D4AF94B3FA3427AAB2FC33B39A9EA50 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_A2BA9D7D5EA94F7E93A91317AF9A8B90 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_4CDDFE84D61642B1AA7A14141EB4AD22 }}
-
-      - name: Deploy to Azure Web App
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: go-azure-ait-test
-          package: build/go-app.zip
+      - name: Deploy to Azure Web App via Kudu
+        run: |
+          $username = "${{ secrets.AZURE_SCM_USERNAME }}"
+          $password = "${{ secrets.AZURE_SCM_PASSWORD }}"
+          $auth = [Convert]::ToBase64String([Text.Encoding]::ASCII.GetBytes("${username}:${password}"))
+          $headers = @{ Authorization = "Basic $auth" }
+          Invoke-WebRequest -Uri "https://go-azure-ait-test.scm.azurewebsites.net/api/zipdeploy" -Headers $headers -InFile "build/go-app.zip" -Method Post
+        shell: pwsh
