--- a/.github/workflows/master_go-azure-ait-test.yml
+++ b/.github/workflows/master_go-azure-ait-test.yml
@@ -59,5 +59,5 @@ jobs:
           $password = "${{ secrets.AZURE_SCM_PASSWORD }}"
           $auth = [Convert]::ToBase64String([Text.Encoding]::ASCII.GetBytes("${username}:${password}"))
           $headers = @{ Authorization = "Basic $auth" }
-          Invoke-WebRequest -Uri "https://go-azure-ait-test.scm.azurewebsites.net/api/zipdeploy" -Headers $headers -InFile "build/go-app.zip" -Method Post
+          Invoke-WebRequest -Uri "https://aitrest-dzhgdbhmaed7ehdj.scm.azurewebsites.net/api/zipdeploy" -Headers $headers -InFile "build/go-app.zip" -Method Post
         shell: pwsh
