--- a/.github/workflows/master_aitrest.yml
+++ b/.github/workflows/master_aitrest.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy ASP.Net Core app to Azure Web App - aitrest
+name: Build and deploy Golang app to Azure Web App - aitrest
 
 on:
   push:
@@ -13,27 +10,37 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read  # This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up .NET Core
-        uses: actions/setup-dotnet@v4
+      - name: Set up Go
+        uses: actions/setup-go@v4
         with:
-          dotnet-version: '8.0'
+          go-version: 1.22
 
-      - name: Build with dotnet
-        run: dotnet build --configuration Release
+      - name: Build
+        run: |
+          mkdir -p build
+          go build -o build/go-app.exe -v
 
-      - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      - name: Test
+        run: go test ./...
+
+      - name: Archive build artifacts
+        run: |
+          mkdir -p build/zip
+          cp build/go-app.exe build/zip/
+          cd build/zip
+          zip -r ../go-app.zip .
+        shell: bash
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: go-app
+          path: build/go-app.zip
 
   deploy:
     runs-on: ubuntu-latest
@@ -42,27 +49,25 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write  # This is required for requesting the JWT
+      contents: read  # This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
-      
+          name: go-app
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C3D5BB924EE64098B384CB59D0C39F46 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E1EA9BFA3E7E46F39EF18C93095A9B57 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_35EE731E85C4418AA1F62D77B3F4E67E }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'aitrest'
-          slot-name: 'Production'
-          package: .
-          
+          package: build/go-app.zip
