--- a/.github/workflows/master_aitrest.yml
+++ b/.github/workflows/master_aitrest.yml
@@ -49,20 +49,20 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write  # This is required for requesting the JWT
-      contents: read  # This is required for actions/checkout
+      id-token: write #This is required for requesting the JWT
+      contents: read #This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: go-app
-
+          name: .net-app
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_C3D5BB924EE64098B384CB59D0C39F46 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E1EA9BFA3E7E46F39EF18C93095A9B5 }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_E1EA9BFA3E7E46F39EF18C93095A9B57 }}
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_35EE731E85C4418AA1F62D77B3F4E67E }}
 
       - name: Deploy to Azure Web App
@@ -70,4 +70,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'aitrest'
-          package: build/go-app.zip
+          slot-name: 'Production'
+          package: .
+          
