--- a/.github/workflows/master_aitrest.yml
+++ b/.github/workflows/master_aitrest.yml
@@ -56,7 +56,8 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .go-app
+          name: go-app
+          path: build
       
       - name: Login to Azure
         uses: azure/login@v2
